# knoten

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
app/: __init__.py  settings.py
app/cli/: main.py  output.py
app/models/: __init__.py  note.py
app/repositories/: backend.py  errors.py  http_client.py  local_backend.py  lock.py  remote_backend.py  store.py  vault_files.py
app/services/: kasten_filename.py  markdown_parser.py  note_mapper.py  notes.py  reconcile.py  reindex.py  sync.py
docs/: CNAME  commands.md  index.md  install.md  legal.md  quick-start.md  vault-structure.md
docs/assets/stylesheets/: extra.css
knoten/: __init__.py  migrate.py  paths.py  settings.py
knoten/cli/: __init__.py  config.py  main.py  output.py
knoten/models/: __init__.py  note.py
knoten/repositories/: __init__.py  backend.py  errors.py  local_backend.py  lock.py  remote_backend.py  store.py  sync_state.py  vault_files.py
knoten/services/: __init__.py  knoten_filename.py  note_mapper.py  notes.py  reconcile.py  reindex.py  sync.py
tests/: conftest.py  test_ai_flag.py  test_append.py  test_attachments.py  test_backend_protocol.py  test_cli_local_mode.py  test_cli_smoke.py  test_cli_write_minimal.py  test_graph.py  test_http_client.py  test_ingest_and_files.py  test_local_backend_reads.py  test_local_backend_reindex.py  test_local_backend_rename.py  test_local_backend_writes.py  test_markdown_parser.py  test_mcp_permissions.py  test_migrate.py  test_note_mapper.py  test_paths.py  test_permissions.py  test_reconcile.py  test_reindex_and_integrity.py  test_restricted_notes.py  test_store.py  test_sync.py
