[project]
name = "knoten"
version = "0.3.0"
description = "Standalone CLI zettelkasten with a local markdown vault and SQLite FTS5 index; optionally plugs into a remote backend for multi-device sync"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alice Voland" }]
requires-python = ">=3.12"
dependencies = [
    "environs>=14.6.0",
    "httpx[socks]>=0.28",
    "markdown-it-py>=3.0",
    "platformdirs>=4.0",
    "rapidfuzz>=3.9",
    "rich>=13.9",
    "typer>=0.16",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://knoten.vcoeur.com/"
Documentation = "https://vcoeur.github.io/knoten/"
Repository = "https://github.com/vcoeur/knoten"
Issues = "https://github.com/vcoeur/knoten/issues"

[project.scripts]
knoten = "knoten.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knoten"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105", "SIM117"]

[tool.ruff.lint.per-file-ignores]
# Typer's Option(...) default-arg pattern is idiomatic; B008 flags it.
"knoten/cli/main.py" = ["B008"]
